# roost

./: .coderabbit.yaml  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  Makefile  README.md  RELEASING.md  clippy.toml  go.mod  go.sum  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  go-legacy.yml  refactor.yml  release.yml  sanity-check-app.yml
.shed/: provision.yaml
.shed/scripts/: install.sh  startup.sh
cmd/roost/: app.go  font.go  font_test.go  icons.go  indicator.go  input.go  keymap.go  keymap_test.go  loghandler.go  loghandler_test.go  main.go  notify.go  notify_test.go  paste_image.go  paste_image_test.go  path_display_test.go  project_row.go  render.go  scroll_test.go  selection.go  selection_test.go  session.go  shortcuts.go  shortcuts_test.go  sidebar_reorder_test.go  sprite.go  sprite_test.go  style.css  theme.go  theme_test.go
cmd/roost-cli/: claude.go  claude_hook.go  claude_hook_test.go  claude_install.go  claude_install_test.go  cli_test.go  client.go  completion.go  hook_e2e_test.go  identify.go  main.go  notify.go  output.go  output_test.go  root.go  tab.go  tab_test.go  version.go
crates/: README.md
crates/roost-cli/: Cargo.toml
crates/roost-cli-rs/: Cargo.toml
crates/roost-cli-rs/src/: main.rs
crates/roost-cli/src/: main.rs
crates/roost-common/: Cargo.toml
crates/roost-common/src/: lib.rs
crates/roost-core/: Cargo.toml
crates/roost-core/migrations/: 0001_init.sql  0002_user_titled.sql
crates/roost-core/src/: lib.rs  main.rs  osc.rs  pty.rs  runtime.rs  service.rs  state.rs  store.rs
crates/roost-ipc/: Cargo.toml
crates/roost-ipc/src/: client.rs  framing.rs  lib.rs  messages.rs  paths.rs  server.rs  target.rs
crates/roost-ipc/tests/: binary_fidelity.rs  framing.rs  roundtrip.rs  server_framing.rs  vectors.rs
crates/roost-linux/: Cargo.toml
crates/roost-linux/src/: app.rs  cell_metrics.rs  client.rs  clipboard.rs  config.rs  custom_command.rs  events.rs  focus.rs  ipc.rs  key_encoder.rs  keybind.rs  lib.rs  local_client.rs  main.rs  mouse_routing.rs  notification_inbox.rs  palette.rs  palette_ui.rs  paste_image.rs  provider.rs  reconcile.rs  rollup.rs  shell_escape.rs  single_instance.rs  sprite.rs  tab_session.rs  terminal_view.rs  theme.rs  url_launcher.rs  word_selection.rs
crates/roost-linux/src/daemon/: mod.rs  pty.rs  state.rs  store_json.rs
crates/roost-linux/src/resources/: style.css
crates/roost-linux/src/resources/shell-integration/: roost.bash  roost.zsh
crates/roost-linux/src/resources/shell-integration/zsh/: .zshenv
crates/roost-linux/tests/: ipc_dispatch.rs  logging_test.rs  osc_dynamic_color.rs  osc_palette_color_test.rs  pty_smoke.rs  reconcile_test.rs  resync_test.rs  state_persist.rs  word_fixtures.rs
crates/roost-osc/: Cargo.toml
crates/roost-osc/src/: lib.rs
crates/roost-proto/: Cargo.toml  build.rs
crates/roost-proto/src/: lib.rs
crates/roost-smoke/: Cargo.toml
crates/roost-smoke/src/: main.rs
crates/roost-url/: Cargo.toml
crates/roost-url/src/: lib.rs
crates/roost-vt/: Cargo.toml  build.rs
crates/roost-vt/src/: key_encoder.rs  lib.rs  mouse_encoder.rs  render_state.rs  terminal.rs
crates/roost-vt/tests/: grid_ref_test.rs  hyperlink_at_test.rs  key_encoder_test.rs  mouse_encoder_test.rs  palette_test.rs
docs/: appcast.xml  claude-hooks.md  index.md  spec.md
docs/archive/: roost.proto
docs/development/: claude-testing.md  setup.md  spec.md  test-automation.md  vision.md
docs/discovery/: focus.md
docs/getting-started/: first-run.md  installation.md  keybindings.md
docs/guides/: claude-code.md  cwd-tracking.md  extending.md  notifications.md
docs/reference/: architecture.md  cli.md  config.md  fonts.md  ipc.md  paths.md  tab-strip.md  terminal-queries.md  themes.md
internal/config/: adjust.go  adjust_test.go  config.go  config_test.go  paths.go  paths_test.go
internal/core/: core.go  core_test.go
internal/ghostty/: callbacks.go  callbacks_export.go  doc.go  formatter.go  formatter_test.go  grid_ref.go  key.go  key_test.go  mouse.go  paste.go  paste_test.go  render.go  terminal.go  terminal_test.go
internal/ipc/: protocol.go  server.go  server_test.go
internal/links/: regex.go  regex_test.go
internal/openuri/: openuri.go  openuri_darwin.go  openuri_linux.go
internal/osc/: scanner.go  scanner_test.go
internal/pangoextra/: font_options.go  font_options_test.go
internal/pty/: eio.go  pty.go  pty_test.go
internal/store/: store.go  store_test.go
linux/: README.md
linux/scripts/: build-deb.sh
mac/: Package.resolved  Package.swift  README.md
mac/AppIcon.icon/: icon.json
mac/Resources/: AppIcon.icns  Info.plist.template  Roost.entitlements  roostctl.entitlements
mac/scripts/: bundle.sh  make-dmg.sh  notarize.sh  publish-appcast.sh  smoke-launch.sh  update-appcast.py
packaging/: copyright  nfpm.yaml  roost.desktop
packaging/icon/: README.md  generate_icons.py  regenerate.sh
plans/: GODELETE.md  README.md  ci-shell-provisioning-2026-05-31.md  goal-linux-gtk-parity-2026-05-17.md  goal-mac-parity-2026-05-18.md  goal-mac-polish-cursor-keys-2026-05-17.md  goal-phase-6-complete-2026-05-16.md  goal-rust-port-polish-2026-05-16.md  local-env-e2e-flakes-2026-05-31.md  phase-0-direction-setter.md  phase-1-derisk-spikes.md  phase-2-proto-workspace.md  phase-3-rust-core-mvp.md  phase-4-smoke-client.md  phase-5-mac-ui-mvp.md  phase-6a-mac-structural.md  phase-6b-mac-osc-notifications.md  phase-7-5-polish-and-gaps.md  phase-7-linux-ui.md  phase-8-bundling.md  phase-9-cutover.md  title-follows-cwd-2026-05-31.md  ux-assessment-2026-05-16.md
proto/: CHANGELOG.md  README.md  gen-swift.sh  roost.proto
scripts/release/: update-version.sh
scripts/smoke/: linux_single_instance.sh  mac_single_instance.sh  stale_socket_recovery.sh
tests/ipc-vectors/: README.md  app.window_metrics.request.json  app.window_metrics.response.json  identify.request.json  identify.response.json  palette.present.request.json  palette.present.response.json  response.error.json  tab.capture_pty_input.request.json  (+15 more)
tools/: README.md
(+188 files in other folders)
