[project]
name = "roost-docs"
version = "0.1.0"
description = "Documentation for the Roost terminal multiplexer"
requires-python = ">=3.12"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "pymdown-extensions>=10.15",
]
test = [
    "pytest>=9.0.3",
    # Per-test hard cap so one hung test (e.g. a Wayland clipboard/render
    # stall) fails fast instead of eating a CI step's whole budget. Opt-in
    # per job via `--timeout=...`; no global default so it can't surprise
    # the existing X11/Mac jobs.
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tools/roosttest"]
addopts = "-ra"
