[package]
name        = "roost-linux"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
description = "Roost Linux UI — gtk4-rs + libadwaita-rs over the roost-core gRPC contract."

# Phase 6a M8 (initial spike): single-window Identify against the
# daemon. Cell renderer / sidebar / tab bar / StreamPty round-trip
# are Phase 7 follow-up slices. The spike's primary purpose is to
# prove the gtk4-rs + libadwaita-rs toolchain builds end-to-end —
# both on Linux (the eventual production target) and on macOS via
# Homebrew GTK4 so cross-platform development happens on a single
# Mac.

[[bin]]
name = "roost-linux"
path = "src/main.rs"

[dependencies]
roost-proto  = { path = "../roost-proto" }
roost-common = { path = "../roost-common" }
# Phase 7 commit 2: pull in the safe-API wrappers landed in commit 1.
# Linking `--features ffi` brings in libghostty-vt's static archive,
# so the gtk-build CI job now needs the third_party/ghostty/build.sh
# warm-up step (added in this same commit). Local dev: the .a/.dylib
# under third_party/ghostty/out/lib/ must exist before `cargo build -p
# roost-linux`.
roost-vt     = { path = "../roost-vt", features = ["ffi"] }
# Phase 7 commit 2: the OSC scanner moved out of roost-core. Both the
# daemon and roost-linux consume it from here. Mac UI keeps its
# hand-rolled Swift port (vision DL-5: no cross-language FFI tax for
# ~230 LOC of pure-data parsing).
roost-osc    = { path = "../roost-osc" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gtk4-rs + libadwaita-rs. The `v4_12` feature on gtk4 enables the
# 4.12+ APIs the Phase 7 step plan refers to (adw::NavigationSplitView
# in particular, which lands in 4.10 but only stabilizes on the gtk4
# crate side at 4.12). libadwaita's `v1_4` feature gates the
# AdwApplicationWindow + AdwHeaderBar combination this spike uses.
gtk4 = { version = "0.10", features = ["v4_12"] }
libadwaita = { version = "0.8", features = ["v1_4"] }
glib = "0.21"
# Phase 7 commit 4: Cairo + Pango for the cell renderer. gtk4-rs's
# `gtk::DrawingArea::set_draw_func` callback hands us a Cairo context
# directly; `pangocairo` is what bridges Pango layouts to Cairo for
# text rendering. pangocairo-rs uses raw FFI for
# `pango_cairo_context_set_font_options` so the `internal/pangoextra`
# workaround the Go binary needs doesn't apply here (DL-6).
pangocairo = "0.21"
