[package]
name        = "roost-osc"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
description = "Streaming OSC scanner shared between roost-core (daemon-side routing) and roost-linux (UI-side detection)."

# Originally `crates/roost-core/src/osc.rs` (Phase 6a P4). Extracted
# into its own crate during Phase 7 commit 2 so the Linux UI can
# consume the same scanner without depending on the daemon crate.
# The Mac UI keeps its hand-rolled Swift port; cross-language FFI
# for ~230 LOC of pure-data scanning costs more than it saves
# (vision DL-5).

[lib]
path = "src/lib.rs"

[dependencies]

[lints]
workspace = true
