[package]
name        = "roost-smoke"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
publish.workspace      = true
description = "Roost protocol smoke client: open a tab through roost-core and pipe stdin/stdout. The 'telnet for our daemon'."

[[bin]]
name = "roost-smoke"
path = "src/main.rs"

[dependencies]
roost-proto = { path = "../roost-proto" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
async-stream = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }

anyhow    = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
clap      = { workspace = true }

[lints]
workspace = true
